--- a/style.css
+++ b/style.css
@@ -7,6 +7,8 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  background-color: black;
+  color: white;
 }
 body,
 html {
@@ -51,6 +53,7 @@ header {
   justify-content: center;
   align-items: center;
   padding: 25px;
+  cursor: pointer;
 }
 .cell:nth-child(1),
 .cell:nth-child(2),
@@ -71,7 +74,7 @@ header {
 img {
   width: 100%;
 }
-.users-turn {
+.gameStatus {
   margin: 30px 0;
 }
 .reset {
